--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,5 +8,6 @@
     </style>
 
 
-    <style name="Theme.StockPortfolioTracker" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.StockPortfolioTracker" parent="android:Theme.Material.Light.NoActionBar">
+    </style>
 </resources>
